# nipworker

./: .gitignore  .last-branch  .npmignore  AGENTS.md  BENCHMARKS.md  ISSUES_AND_FIXES.md  NipworkerReactNative.podspec  README.md  RESEARCH_LYNX_EVENT_STREAMING.md  RETROSPECTIVE.md  debug-e2e.mjs  index.html  package-lock.json  package.json  playwright.bench.config.ts  playwright.compare.config.ts  playwright.config.ts  prd.json  progress.txt  react-native.config.cjs  react-native.config.ts  release.sh  tsconfig.json  vite.config.ts  vitest.config.ts
crates/cache/: Cargo.toml
crates/cache/src/: lib.rs  opfs_blob_store.rs
crates/core/: Cargo.toml
crates/core/benches/: perf.rs
crates/core/src/: cache_input.rs  channel.rs  crypto_client.rs  engine.rs  lib.rs  nostr_error.rs  platform.rs  port.rs  signer_swap.rs  spawn.rs  traits.rs  utils.rs
crates/core/src/crypto/: crypto_utils.rs  mod.rs  nostr_crypto.rs  utils.rs  utils_crypto.rs
crates/core/src/crypto/signers/: mod.rs  nip04.rs  nip07.rs  nip44.rs  pk.rs  types.rs
crates/core/src/crypto/signers/nip46/: config.rs  crypto.rs  mod.rs  pump.rs  transport.rs
crates/core/src/network/: interfaces.rs  mod.rs  publish.rs  subscription.rs
crates/core/src/parser/: content.rs  kind0.rs  kind1.rs  kind10002.rs  kind10019.rs  kind1018.rs  kind1068.rs  kind1111.rs  kind1311.rs  kind17.rs  kind17375.rs  kind20.rs  kind22.rs  kind3.rs  kind30023.rs  kind4.rs  kind6.rs  kind7.rs  kind7374.rs  kind7375.rs  kind7376.rs  kind8.rs  kind9321.rs  kind9735.rs  mod.rs  nip51.rs  pre_adapters.rs  pre_generic.rs
crates/core/src/parser_types/: parsed_event.rs
crates/core/src/parser_utils/: batch_buffer.rs  buffer.rs  json.rs  mod.rs  request_deduplication.rs  ring_buffer.rs
crates/core/src/pipeline/: mod.rs
crates/core/src/pipeline/pipes/: chat_limiter.rs  counter.rs  kind_filter.rs  mod.rs  mute.rs  npub_limiter.rs  parse.rs  proof_verification.rs  save_to_db.rs  serialize_events.rs
crates/core/src/relays/: mod.rs  types.rs
crates/core/src/service/: engine.rs  mod.rs  resource_tests.rs  timeout_tests.rs
crates/core/src/storage/: mod.rs  persistent.rs  utils.rs
crates/core/src/storage/db/: index.rs  mod.rs  nostr_db_storage.rs  ring_buffer.rs  sharded_storage.rs  types.rs  utils.rs
crates/core/src/transport/: connection.rs  fb_utils.rs  frame_scan.rs  gloo.rs  mod.rs  registry.rs  sub_dedup.rs  types.rs
crates/core/src/types/: mod.rs  network.rs  nostr.rs  proof.rs
crates/core/src/utils/: mod.rs
crates/core/src/worker/: batch_buffer.rs  cache_worker.rs  connections_worker.rs  crypto_worker.rs  mod.rs  parser_worker.rs
crates/core/tests/: cache_hit.rs  deletion.rs  e2e_set_signer.rs  e2e_subscribe.rs  encrypted_cache.rs  multi_relay.rs  nip42_auth.rs  publish_flow.rs  reconnect.rs
crates/core/tests/common/: mod.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: cache.rs  framing.rs  lib.rs  runtime.rs  session.rs  transport.rs
crates/native-ffi/: Cargo.toml  README.md  build.rs
crates/native-ffi/android/: CMakeLists.txt  LynxNipworkerModule.kt  build-android-aar.sh  build.gradle.kts  consumer-rules.pro  nipworker_jni_impl.c  settings.gradle.kts  validate-aar.sh
crates/native-ffi/android/src/main/cpp/: prefab_stub.c
crates/native-ffi/harmony/: LynxNipworkerModule.ets  nipworker_napi.cpp
crates/native-ffi/include/: module.modulemap  nipworker.h
crates/native-ffi/ios/: LynxNipworkerModule.h  LynxNipworkerModule.mm  Nipworker.podspec  README.md  build-ios.sh
crates/native-ffi/ios/NipworkerNativeFFI.xcframework/: Info.plist
crates/native-ffi/react-native/: README.md
crates/native-ffi/react-native/android/: CMakeLists.txt  build.gradle  consumer-rules.pro
crates/native-ffi/react-native/android/src/main/: AndroidManifest.xml
crates/native-ffi/react-native/android/src/main/cpp/: NipworkerByteRuntime.cpp
crates/native-ffi/react-native/ios/: NipworkerReactNative.podspec  NipworkerReactNativeModule.h  NipworkerReactNativeModule.mm
crates/native-ffi/src/: jni.rs  lib.rs  mesh_ffi.rs  signer.rs  storage.rs  transport.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
nostr-main/: Cargo.toml  build.sh
nostr-main/src/: lib.rs  types.rs
src/: engine.ts  (+17 more)
src/cache/: Cargo.toml  index.ts
src/cache/src/: lib.rs  utils.rs
src/cache/src/db/: index.rs  mod.rs  types.rs  utils.rs
src/crypto/: Cargo.toml  index.ts
src/crypto/src/: client.rs  crypto_utils.rs  lib.rs
src/crypto/src/signers/: nip04.rs  nip44.rs  pk.rs
src/crypto/src/signers/nip46/: crypto.rs  mod.rs  pump.rs  transport.rs
src/engine/: Cargo.toml  index.js  index.ts
src/engine/src/: idb_utils.rs  lib.rs  ring_buffer_persist.rs  signer.rs  storage.rs  transport.rs
src/parser/: Cargo.toml  index.ts
src/parser/src/: crypto_client.rs  lib.rs
src/parser/src/network/: interfaces.rs  mod.rs  publish.rs  subscription.rs
src/parser/src/parser/: content.rs  kind0.rs  kind1.rs  kind10002.rs  kind10019.rs  kind1018.rs  kind1068.rs  kind1111.rs  kind1311.rs  kind17.rs  kind17375.rs  kind20.rs  kind22.rs  kind3.rs  kind30023.rs  kind39089.rs  kind4.rs  kind6.rs  kind7.rs  kind7374.rs  kind7375.rs  kind7376.rs  kind9321.rs  kind9735.rs  kind_list.rs  mod.rs  nip51.rs  pre_generic.rs
src/parser/src/pipeline/: mod.rs
src/parser/src/pipeline/pipes/: counter.rs  mute.rs  parse.rs  proof_verification.rs  save_to_db.rs  serialize_events.rs
src/parser/src/relays/: README.md  mod.rs  types.rs
src/parser/src/signer/: interface.rs  manager.rs  mod.rs
src/parser/src/types/: mod.rs  network.rs  nostr.rs  parsed_event.rs  proof.rs
src/parser/src/utils/: batch_buffer.rs  buffer.rs  cashu.rs  mod.rs  request_deduplication.rs
src/shared/: Cargo.toml
src/shared/src/: lib.rs  port.rs  telemetry.rs
src/shared/src/types/: mod.rs  nostr.rs
src/shared/src/utils/: crypto.rs  mod.rs  nostr_crypto.rs
src/signer/: Cargo.toml  index.ts
src/signer/src/: client.rs  lib.rs  service.rs
src/signer/src/signers/: mod.rs  nip04.rs  nip07.rs  nip44.rs  nip46.rs  pk.rs  types.rs
src/signer/src/signers/nip46/: crypto.rs  mod.rs  pump.rs
(+429 files in other folders)
