[package]
name = "nostr-main"
version = "0.1.0"
edition = "2021"

[lib]
name = "nostr_main"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[profile.dev]
debug = 2              # Full debug info
panic = "unwind"       # Allow unwinding for better stack traces
opt-level = 0          # No optimization
overflow-checks = true
lto = false
codegen-units = 256
incremental = true

[profile.release]
opt-level = "s"         # Optimize for size
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Reduce number of codegen units to increase optimizations
panic = "abort"         # Abort on panic to reduce binary size
strip = true            # Strip symbols from binary
debug = false           # Disable debug info in release builds
overflow-checks = false # Disable overflow checks in release

[dependencies]
nostr = { version = "0.29", default-features = false, features = [
    "std",
], optional = true }
# Async runtime and utilities
wasm-bindgen-futures = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
serde-wasm-bindgen = "0.6"

# WASM bindings
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

# Memory optimization
wee_alloc = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = ["console", "Window", "Worker", "MessageEvent", "MessagePort"]

[features]
default = ["console_error_panic_hook", "nostr"]
wee_alloc = ["dep:wee_alloc"]
nostr = ["dep:nostr"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O4",
    "--enable-bulk-memory",
    "--enable-sign-ext",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false
