[package]
name = "nipworker-cache"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nipworker-core = { path = "../core", features = ["cache"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
async-trait = "0.1"
web-sys = { version = "0.3", features = [
	"Blob",
	"DedicatedWorkerGlobalScope",
	"File",
	"FileSystemDirectoryHandle",
	"FileSystemFileHandle",
	"FileSystemGetDirectoryOptions",
	"FileSystemGetFileOptions",
	"FileSystemWritableFileStream",
	"MessagePort",
	"StorageManager",
	"WorkerGlobalScope",
	"WorkerNavigator",
	"WritableStream"
] }
console_error_panic_hook = "0.1"
tracing = "0.1"
tracing-wasm = "0.2"
