[package]
name = "nipworker-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
flatbuffers = "25.2.10"
tracing = "0.1"
thiserror = "1.0"
rustc-hash = "2.0"
hex = "0.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = { version = "0.3", default-features = false, features = ["std"] }
async-trait = "0.1"
async-lock = "3.4.1"
regex = "1"

# Optional crypto dependencies
k256 = { version = "0.13.4", optional = true, features = ["ecdh"] }
sha2 = { version = "0.10.9", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
chacha20 = { version = "0.9", optional = true }
hmac = { version = "0.12", optional = true }
hkdf = { version = "0.12", optional = true }
base64 = { version = "0.22", optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", features = ["alloc"], optional = true }
signature = { version = "2", optional = true }
url = { version = "2.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
serde-wasm-bindgen = "0.5"

[features]
default = []
crypto = [
    "k256",
    "sha2",
    "getrandom",
    "chacha20",
    "hmac",
    "hkdf",
    "base64",
    "aes",
    "cbc",
    "signature",
    "url",
]
