[package]
name = "nipworker-mesh"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
flatbuffers = "25.2.10"
futures = { version = "0.3", features = ["std", "async-await"] }
hex = "0.4"
negentropy = "0.5"
nipworker-core = { path = "../core", features = ["cache", "crypto"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
blake3 = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
