[package]
name = "nipworker-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nipworker-core = { path = "../core", features = ["parser", "crypto"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["MessagePort"] }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
