[package]
name = "cache"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared= {path = "../shared"}
tracing = "0.1"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
js-sys = "0.3"
flatbuffers = "25.2.10"
gloo-timers = { version = "0.3", features = ["futures"] }

thiserror = "1.0"
rustc-hash = "2.1"
serde_json = "1.0.145"

futures = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["sync"] }

[dependencies.web-sys]
version = "0.3"
default-features = false
features = [
    "console",
    # IndexedDB:
    "DomStringList",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    # MessageChannel:
    "MessagePort",
    "MessageEvent",
]



[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O3",
    "--strip-debug",
    "--strip-producers",
    "--enable-bulk-memory",
    "--enable-sign-ext",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
    "--enable-simd"
]
