[package]
name = "nipworker-engine"
version = "0.96.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nipworker-core = { path = "../../crates/core", features = ["crypto"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "MessagePort", "MessageEvent"] }
gloo-net = { version = "0.5", features = ["websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
futures = "0.3"
futures-channel = "0.3"
async-lock = "3.4.1"
tracing = "0.1"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flatbuffers = "25.2.10"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O3",
    "--strip-debug",
    "--strip-producers",
    "--enable-bulk-memory",
    "--enable-sign-ext",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
    "--enable-simd"
]
