[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
# rlib so it can be linked into cdylib wasm crates
crate-type = ["rlib"]

[dependencies]
flatbuffers = "25.2.10"
tracing = "0.1"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O3",
    "--strip-debug",
    "--strip-producers",
    "--enable-bulk-memory",
    "--enable-sign-ext",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
    "--enable-simd"
]
