[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
# rlib so it can be linked into cdylib wasm crates
crate-type = ["rlib"]

[dependencies]
flatbuffers = "25.2.10"
tracing = "0.1"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["MessagePort", "MessageChannel", "MessageEvent"] }
thiserror = "1.0"
rustc-hash = "2.0"
hex = "0.4.3"
futures = { version = "0.3", default-features = false, features = ["std"] }
k256 = { version = "0.13.4", optional = true }
sha2 = { version = "0.10.9", optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[features]
default = []
crypto = ["k256", "sha2", "getrandom"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O3",
    "--strip-debug",
    "--strip-producers",
    "--enable-bulk-memory",
    "--enable-sign-ext",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
    "--enable-simd"
]
