[package]
name = "signer"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "Nostr signer worker (PK, NIP-07, NIP-46) for wasm/browser using SAB rings"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings and utilities
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }
gloo-timers = { version = "0.3", features = ["futures"] }

# Logging / errors
tracing = "0.1"
thiserror = "1"

# Messaging
flatbuffers = "23"

# Optional JSON interop for direct methods (frontend convenience)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.5"

# Channels for simple oneshot/futures patterns (browser-friendly)
futures-channel = "0.3"

# Workspace-local shared utilities (SAB ring, telemetry)
shared = { path = "../shared" }

[features]
default = []
